client-srv-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client-srv
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
