ingress_service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rules
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /posts/create
            pathType: Prefix
            backend:
              service:
                name: posts-clusterip-srv
                port:
                  number: 4000
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: query-srv
                port:
                  number: 4002
          - path: /posts/(.*)/comments
            pathType: Prefix
            backend:
              service:
                name: comments-srv
                port:
                  number: 4001
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
